# Inkue

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INPUT.md  LIGHT.md  OSCPLAN.md  PORTAGE.md  PROGRESS.md  README.md  RENAME.md  TIMECODE.md  WHATSNEXT.md  index.html  package.json  pnpm-lock.yaml  setup.sh  wincue-prompt.md
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: RELEASING.md
docs/archive/: OSCPLAN.md  inkue-prompt.md  wincue-prompt.md
scripts/: bundle_macos_libs.sh  rasterize-svg.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  float-timer.json  image-surface.json  preferences.json  video-surface.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundled_fonts.rs  health.rs  lib.rs  logger.rs  machine_config.rs  main.rs  preferences.rs  recovery.rs
src-tauri/src/commands/: cue_cmds.rs  cue_list_cmds.rs  device_cmds.rs  health_cmds.rs  input_cmds.rs  light_cmds.rs  log_cmds.rs  midi_cmds.rs  mod.rs  osc_cmds.rs  preferences_cmds.rs  preflight_cmds.rs  recovery_cmds.rs  timecode_cmds.rs  transport_cmds.rs  undo_cmds.rs  workspace_cmds.rs
src-tauri/src/cue/: audio_cue.rs  context.rs  fade_cue.rs  group_cue.rs  image_cue.rs  light_cue.rs  media_decode.rs  memo_cue.rs  mic_cue.rs  midi_cue.rs  mod.rs  osc_cue.rs  osc_types.rs  registry.rs  stop_cue.rs  text_cue.rs  timecode_cue.rs  traits.rs  types.rs  validation.rs  video_cue.rs  wait_cue.rs
src-tauri/src/engine/: audio_engine.rs  audio_input.rs  device_manager.rs  dmx_engine.rs  dmx_sink.rs  fixture.rs  image_engine.rs  ltc.rs  mod.rs  mpv_sys.rs  osc_feedback.rs  osc_patch.rs  osc_server.rs  ring_command.rs  timecode_generator.rs  timecode_receiver.rs  timecode_types.rs  video_engine.rs  voice.rs
src-tauri/src/engine/output_engine/: fade.rs  macos_window.rs  mod.rs  mpv_events.rs  pcm_pipe.rs  render.rs  types.rs  win32_window.rs
src-tauri/src/show/: cue_list.rs  event_loop.rs  mod.rs  transport.rs  undo_stack.rs  video_pre_arm.rs  workspace.rs
src-tauri/src/state/: app_state.rs
src/components/: ImageSurface.tsx  WaveformModal.tsx
src/components/About/: AboutDialog.tsx
src/components/ActiveCues/: ActiveCuesView.tsx
src/components/CueList/: CartView.tsx  CueListTabs.tsx  CueListView.tsx  CueRow.tsx  PlayheadIndicator.tsx  columns.ts
src/components/Health/: HealthBanner.tsx
src/components/InputPatches/: InputPatchesPanel.tsx
src/components/Inspector/: BasicsTab.tsx  ColorPicker.tsx  FadeTab.tsx  Field.tsx  InspectorPanel.tsx  LevelsTab.tsx  LightTab.tsx  MicTab.tsx  MidiTab.tsx  OscTab.tsx  ScrubBar.tsx  TextTab.tsx  TimeTab.tsx  TimecodeTab.tsx  TriggersTab.tsx  WaveformViewer.tsx
src/components/Lighting/: FixtureDashboard.tsx  FixturePatch.tsx  GroupManager.tsx  LightingPanel.tsx
src/components/Logs/: LogViewerModal.tsx
src/components/Osc/: OscMonitor.tsx
src/components/OscPatches/: OscPatchesPanel.tsx
src/components/Preferences/: PreferencesModal.tsx  PreferencesStandalone.tsx
src/components/Preflight/: PreflightModal.tsx
src/components/ShowMode/: ShowModeView.tsx
src/components/Timecode/: TcPreferences.tsx  TcStatusIndicator.tsx
src/components/Transport/: TransportBar.tsx
src/components/common/: CurveSelect.tsx  InkueMark.tsx  RunningLed.tsx  Select.tsx  TimeDisplay.tsx
src/hooks/: useKeyboardShortcuts.ts  useTauriEvents.ts
src/lib/: commands.ts  fixtureColor.ts  types.ts
src/stores/: timingStore.ts  transportStore.ts  workspaceStore.ts
src/windows/: FloatTimer.tsx
