[package]
name = "wincue"
version = "0.7.1"
edition = "2021"

[lib]
name = "wincue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wincue"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

# Audio
cpal = { version = "0.15", features = ["wasm-bindgen"] }

# Video — libmpv loaded at runtime via libloading (no link-time import library needed)
libloading = "0.8"

# Lock-free comms
ringbuf = "0.4"
crossbeam-channel = "0.5"

# Image encoding (base64 data URLs for image surface windows)
base64 = "0.22"

# OSC
rosc = "0.10"

# MIDI
midir = "0.10"

# Logging
log = "0.4"
env_logger = "0.11"

# Windows-specific dependencies
# winreg is used for ASIO driver detection (asio-support feature only)
[target.'cfg(windows)'.dependencies]
winreg = { version = "0.52", optional = true }
symphonia = { version = "0.5", features = ["mp3", "aac", "flac", "ogg", "wav", "isomp4"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
# Enable ASIO support. Requires:
#   1. Steinberg ASIO SDK (free at steinberg.net/developers)
#   2. CPAL_ASIO_DIR env var pointing to the SDK root before building
#   3. Build with: cargo build --features asio-support
asio-support = ["cpal/asio", "winreg"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
